--- a/app-ui/src/main/res/layout/fragment_splash.xml
+++ b/app-ui/src/main/res/layout/fragment_splash.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_eco_black"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_ellipse_logo"
         android:layout_gravity="center"/>
 
 </FrameLayout>
