--- a/app-ui/src/main/res/layout/fragment_search_by_tag.xml
+++ b/app-ui/src/main/res/layout/fragment_search_by_tag.xml
@@ -1,171 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/mainContainer"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/backArrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_arrow_back"
+        android:layout_margin="24dp"
+        android:foregroundTint="#3F5C47"/>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:padding="24dp">
+        android:padding="24dp"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/tag"
+            android:layout_marginBottom="16dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/home_process_title"
-            android:textSize="20sp"
+            android:text="@string/search_by_tag_title"
+            android:textSize="24sp"
             android:fontFamily="@font/roboto_bold"
+            android:textColor="@color/colorTextBlack"
+            android:layout_marginBottom="16dp"/>
+
+        <TextView
+            android:id="@+id/textScan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/search_by_tag_id_text"
+            android:textSize="16sp"
+            android:fontFamily="@font/roboto_regular"
             android:textColor="@color/colorTextBlack" />
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/new_cow"
-            android:layout_marginTop="16dp"
+        <EditText
+            android:id="@+id/tagEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardElevation="0dp"
-            app:cardBackgroundColor="@color/colorBack"
-            app:cardCornerRadius="0dp"
-            app:strokeColor="@color/colorBorder"
-            app:strokeWidth="1dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/home_process_new_cow"
-                android:textColor="@color/colorTextBlack"
-                android:fontFamily="@font/roboto_regular"
-                android:textSize="18sp"
-                android:padding="16dp"
-                android:drawableStart="@drawable/ic_add"
-                android:drawablePadding="8dp"/>
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cow_info"
-            android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="0dp"
-            app:cardBackgroundColor="@color/colorBack"
-            app:cardCornerRadius="0dp"
-            app:strokeColor="@color/colorBorder"
-            app:strokeWidth="1dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/home_process_cow_info"
-                android:textColor="@color/colorTextBlack"
-                android:fontFamily="@font/roboto_regular"
-                android:textSize="18sp"
-                android:padding="16dp"
-                android:drawableStart="@drawable/ic_info"
-                android:drawablePadding="8dp"/>
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cow_sex"
-            android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="0dp"
-            app:cardBackgroundColor="@color/colorBack"
-            app:cardCornerRadius="0dp"
-            app:strokeColor="@color/colorBorder"
-            app:strokeWidth="1dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/home_process_cow_sex"
-                android:textColor="@color/colorTextBlack"
-                android:fontFamily="@font/roboto_regular"
-                android:textSize="18sp"
-                android:padding="16dp"
-                android:drawableStart="@drawable/ic_search"
-                android:drawablePadding="8dp"/>
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cow_inventory"
-            android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="0dp"
-            app:cardBackgroundColor="@color/colorBack"
-            app:cardCornerRadius="0dp"
-            app:strokeColor="@color/colorBorder"
-            app:strokeWidth="1dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/home_process_cow_inventory"
-                android:textColor="@color/colorTextBlack"
-                android:fontFamily="@font/roboto_regular"
-                android:textSize="18sp"
-                android:padding="16dp"
-                android:drawableStart="@drawable/ic_news"
-                android:drawablePadding="8dp"/>
-
-        </com.google.android.material.card.MaterialCardView>
+            android:background="@drawable/shape_edit_text"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="12dp"
+            android:layout_marginTop="24dp"
+            android:maxLines="1"
+            android:inputType="number"
+            android:hint="@string/search_by_tag_id_text_hint"
+            android:textColorHint="@color/colorTextSecondary"/>
 
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/mainCard"
+        android:id="@+id/buttonsCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingVertical="24dp"
+        android:padding="24dp"
         android:background="@drawable/shape_back_gradient">
 
-        <TextView
-            android:id="@+id/name"
+        <online.juter.supersld.view.input.selectors.JTHorizontalSwitch
+            android:id="@+id/searchTypeSwitch"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="Юрий Воронцов"
-            android:textSize="24sp"
-            android:fontFamily="@font/roboto_bold"
-            android:textColor="@color/colorTextWhite"
-            android:paddingHorizontal="24dp"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/home_tasks_title"
-            android:textSize="20sp"
-            android:fontFamily="@font/roboto_regular"
-            android:textColor="@color/colorTextWhite"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:paddingHorizontal="24dp"/>
+            android:layout_height="wrap_content"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingStart="24dp">
+            android:layout_marginTop="16dp"
+            android:gravity="center">
 
-            <View
-                android:layout_width="241dp"
-                android:layout_height="115dp"
-                android:background="#59818DAD"
-                android:layout_marginEnd="16dp"/>
+            <ProgressBar
+                android:id="@+id/progress"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:indeterminateTint="#FFFFFF"
+                android:visibility="gone"/>
 
-            <View
-                android:layout_width="241dp"
-                android:layout_height="115dp"
-                android:background="#59818DAD"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/searchScanButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/ButtonWhiteEmpty"
+                android:text="@string/search_by_tag_button" />
 
         </LinearLayout>
+
 
     </LinearLayout>
 
